--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class="container">
         <div class="todo-app">
             <h2>Todo List</h2>
+            <div class="task-input-section">
+                <input type="text" id="task-input-box" placeholder="Enter your task">
+                <button>Add</button>
+            </div>
         </div>
     </div>
 
