Created todo templates

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <input type="text" id="task-input-box" placeholder="Enter your task">
                 <button>Add</button>
             </div>
+            <ul>
+                <!-- <li class="checked">Hello</li>
+                <li>Hi</li>
+                <li>wassup</li> -->
+            </ul>
         </div>
     </div>
 
