--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h2>Todo List</h2>
             <div class="task-input-section">
                 <input type="text" id="task-input-box" placeholder="Enter your task">
-                <button>Add</button>
+                <button class="todo-add", onclick="addTask()">Add</button>
             </div>
-            <ul>
+            <ul class="todo-list">
                 <!-- <li class="checked">Hello</li>
                 <li>Hi</li>
                 <li>wassup</li> -->
