Added a tick button for better user experience

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="todo-list">
                 <!-- <li class="checked">Hello</li>
-                <li>Hi</li>
+                <li><span class="tick-btn"></span>Hi</li>
                 <li>wassup</li> -->
             </ul>
         </div>
